[gd_scene load_steps=12 format=3 uid="uid://d6iy5muhsacy"]

[ext_resource type="Script" path="res://Scripts/Global/implant_chest.gd" id="1_o1mab"]
[ext_resource type="Texture2D" uid="uid://d2dmyjshxnf3h" path="res://Assets/Arts/Tiles/Sidescroller Shooter - Central City/Assets/Buildings.png" id="2_xelmb"]
[ext_resource type="Theme" uid="uid://u4unsqyy6047" path="res://Assets/Arts/Gui/gui_them.tres" id="3_kdye4"]
[ext_resource type="Texture2D" uid="uid://cmpi4h8fgc4e2" path="res://Assets/Arts/Items/implant_placeholder.png" id="4_gyl6l"]
[ext_resource type="Shader" path="res://Scenes/glow_implant.gdshader" id="4_ymegq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2pp4t"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(13.92, 0.5, 1)
orbit_velocity_min = -0.34
orbit_velocity_max = 0.971
gravity = Vector3(0, -100, 0)
scale_max = 8.35
color = Color(1, 1, 1, 0.52549)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vraum"]
size = Vector2(32, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ioew"]
shader = ExtResource("4_ymegq")
shader_parameter/glow_radius = 50.0
shader_parameter/glow_color = Vector4(1, 1, 1, 0.5)
shader_parameter/angle_speed = 1.0
shader_parameter/time_offset = 0.0
shader_parameter/noise_scale = 1.0

[sub_resource type="Animation" id="Animation_jklu6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_srk4n"]
resource_name = "show_message"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hml7v"]
_data = {
"RESET": SubResource("Animation_jklu6"),
"show_message": SubResource("Animation_srk4n")
}

[node name="implant_chest" type="StaticBody2D"]
z_index = 3
script = ExtResource("1_o1mab")

[node name="Closed" type="Sprite2D" parent="."]
texture = ExtResource("2_xelmb")
region_enabled = true
region_rect = Rect2(144, 192, 32, 32)

[node name="Opened" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_xelmb")
region_enabled = true
region_rect = Rect2(176, 192, 32, 32)

[node name="SmokeParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_2pp4t")
one_shot = true

[node name="GrabTheItemArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabTheItemArea"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_vraum")

[node name="MessageTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100
visible = false
scale = Vector2(0.1, 0.1)
transform = Transform2D(0.1, 0, 0, 0.1, 0, 0)

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -241.0
offset_right = 581.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("3_kdye4")
theme_override_font_sizes/font_size = 36
text = "Placeholder"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AddicionalMessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -473.0
offset_top = -132.0
offset_right = 474.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("3_kdye4")
theme_override_font_sizes/font_size = 36
text = "press 'e' to open an inventory"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ImplantSprite" type="Sprite2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_0ioew")
position = Vector2(589, 249)
scale = Vector2(13.875, 13.875)
texture = ExtResource("4_gyl6l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_hml7v")
}

[connection signal="body_entered" from="GrabTheItemArea" to="." method="_on_grab_the_item_area_body_entered"]
[connection signal="body_exited" from="GrabTheItemArea" to="." method="_on_grab_the_item_area_body_exited"]
